update reference process

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -371,7 +371,8 @@
     }
    ],
    "source": [
-    "res = model.simple_test_bboxes(img, img_meta)\n",
+    "proposals = model.simple_test_rpn(img, img_meta)\n",
+    "res = model.simple_test_bboxes(img, img_meta, proposals)\n",
     "visualize.display_instances(ori_img, res['rois'], res['class_ids'], \n",
     "                            train_dataset.get_categories(), scores=res['scores'])"
    ]
