--- a/eval_model.ipynb
+++ b/eval_model.ipynb
@@ -13,24 +13,15 @@
     "from pycocotools.cocoeval import COCOeval\n",
     "\n",
     "from detection.datasets import coco, data_generator\n",
-    "from detection.models.detectors import faster_rcnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.enable_eager_execution()\n",
-    "tf.executing_eagerly()\n",
+    "from detection.models.detectors import faster_rcnn\n",
+    "\n",
     "\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +29,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.58s)\n",
+      "Done (t=0.54s)\n",
       "creating index...\n",
       "index created!\n",
       "4952\n"
@@ -73,8 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## next: \n",
+    "\n",
+    "train and validate on the same dataset\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,55 +82,501 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
       "100\n",
+      "110\n",
+      "120\n",
+      "130\n",
+      "140\n",
+      "150\n",
+      "160\n",
+      "170\n",
+      "180\n",
+      "190\n",
       "200\n",
+      "210\n",
+      "220\n",
+      "230\n",
+      "240\n",
+      "250\n",
+      "260\n",
+      "270\n",
+      "280\n",
+      "290\n",
       "300\n",
+      "310\n",
+      "320\n",
+      "330\n",
+      "340\n",
+      "350\n",
+      "360\n",
+      "370\n",
+      "380\n",
+      "390\n",
       "400\n",
+      "410\n",
+      "420\n",
+      "430\n",
+      "440\n",
+      "450\n",
+      "460\n",
+      "470\n",
+      "480\n",
+      "490\n",
       "500\n",
+      "510\n",
+      "520\n",
+      "530\n",
+      "540\n",
+      "550\n",
+      "560\n",
+      "570\n",
+      "580\n",
+      "590\n",
       "600\n",
+      "610\n",
+      "620\n",
+      "630\n",
+      "640\n",
+      "650\n",
+      "660\n",
+      "670\n",
+      "680\n",
+      "690\n",
       "700\n",
+      "710\n",
+      "720\n",
+      "730\n",
+      "740\n",
+      "750\n",
+      "760\n",
+      "770\n",
+      "780\n",
+      "790\n",
       "800\n",
+      "810\n",
+      "820\n",
+      "830\n",
+      "840\n",
+      "850\n",
+      "860\n",
+      "870\n",
+      "880\n",
+      "890\n",
       "900\n",
+      "910\n",
+      "920\n",
+      "930\n",
+      "940\n",
+      "950\n",
+      "960\n",
+      "970\n",
+      "980\n",
+      "990\n",
       "1000\n",
+      "1010\n",
+      "1020\n",
+      "1030\n",
+      "1040\n",
+      "1050\n",
+      "1060\n",
+      "1070\n",
+      "1080\n",
+      "1090\n",
       "1100\n",
+      "1110\n",
+      "1120\n",
+      "1130\n",
+      "1140\n",
+      "1150\n",
+      "1160\n",
+      "1170\n",
+      "1180\n",
+      "1190\n",
       "1200\n",
+      "1210\n",
+      "1220\n",
+      "1230\n",
+      "1240\n",
+      "1250\n",
+      "1260\n",
+      "1270\n",
+      "1280\n",
+      "1290\n",
       "1300\n",
+      "1310\n",
+      "1320\n",
+      "1330\n",
+      "1340\n",
+      "1350\n",
+      "1360\n",
+      "1370\n",
+      "1380\n",
+      "1390\n",
       "1400\n",
+      "1410\n",
+      "1420\n",
+      "1430\n",
+      "1440\n",
+      "1450\n",
+      "1460\n",
+      "1470\n",
+      "1480\n",
+      "1490\n",
       "1500\n",
+      "1510\n",
+      "1520\n",
+      "1530\n",
+      "1540\n",
+      "1550\n",
+      "1560\n",
+      "1570\n",
+      "1580\n",
+      "1590\n",
       "1600\n",
+      "1610\n",
+      "1620\n",
+      "1630\n",
+      "1640\n",
+      "1650\n",
+      "1660\n",
+      "1670\n",
+      "1680\n",
+      "1690\n",
       "1700\n",
+      "1710\n",
+      "1720\n",
+      "1730\n",
+      "1740\n",
+      "1750\n",
+      "1760\n",
+      "1770\n",
+      "1780\n",
+      "1790\n",
       "1800\n",
+      "1810\n",
+      "1820\n",
+      "1830\n",
+      "1840\n",
+      "1850\n",
+      "1860\n",
+      "1870\n",
+      "1880\n",
+      "1890\n",
       "1900\n",
+      "1910\n",
+      "1920\n",
+      "1930\n",
+      "1940\n",
+      "1950\n",
+      "1960\n",
+      "1970\n",
+      "1980\n",
+      "1990\n",
       "2000\n",
+      "2010\n",
+      "2020\n",
+      "2030\n",
+      "2040\n",
+      "2050\n",
+      "2060\n",
+      "2070\n",
+      "2080\n",
+      "2090\n",
       "2100\n",
+      "2110\n",
+      "2120\n",
+      "2130\n",
+      "2140\n",
+      "2150\n",
+      "2160\n",
+      "2170\n",
+      "2180\n",
+      "2190\n",
       "2200\n",
+      "2210\n",
+      "2220\n",
+      "2230\n",
+      "2240\n",
+      "2250\n",
+      "2260\n",
+      "2270\n",
+      "2280\n",
+      "2290\n",
       "2300\n",
+      "2310\n",
+      "2320\n",
+      "2330\n",
+      "2340\n",
+      "2350\n",
+      "2360\n",
+      "2370\n",
+      "2380\n",
+      "2390\n",
       "2400\n",
+      "2410\n",
+      "2420\n",
+      "2430\n",
+      "2440\n",
+      "2450\n",
+      "2460\n",
+      "2470\n",
+      "2480\n",
+      "2490\n",
       "2500\n",
+      "2510\n",
+      "2520\n",
+      "2530\n",
+      "2540\n",
+      "2550\n",
+      "2560\n",
+      "2570\n",
+      "2580\n",
+      "2590\n",
       "2600\n",
+      "2610\n",
+      "2620\n",
+      "2630\n",
+      "2640\n",
+      "2650\n",
+      "2660\n",
+      "2670\n",
+      "2680\n",
+      "2690\n",
       "2700\n",
+      "2710\n",
+      "2720\n",
+      "2730\n",
+      "2740\n",
+      "2750\n",
+      "2760\n",
+      "2770\n",
+      "2780\n",
+      "2790\n",
       "2800\n",
+      "2810\n",
+      "2820\n",
+      "2830\n",
+      "2840\n",
+      "2850\n",
+      "2860\n",
+      "2870\n",
+      "2880\n",
+      "2890\n",
       "2900\n",
+      "2910\n",
+      "2920\n",
+      "2930\n",
+      "2940\n",
+      "2950\n",
+      "2960\n",
+      "2970\n",
+      "2980\n",
+      "2990\n",
       "3000\n",
+      "3010\n",
+      "3020\n",
+      "3030\n",
+      "3040\n",
+      "3050\n",
+      "3060\n",
+      "3070\n",
+      "3080\n",
+      "3090\n",
       "3100\n",
+      "3110\n",
+      "3120\n",
+      "3130\n",
+      "3140\n",
+      "3150\n",
+      "3160\n",
+      "3170\n",
+      "3180\n",
+      "3190\n",
       "3200\n",
+      "3210\n",
+      "3220\n",
+      "3230\n",
+      "3240\n",
+      "3250\n",
+      "3260\n",
+      "3270\n",
+      "3280\n",
+      "3290\n",
       "3300\n",
+      "3310\n",
+      "3320\n",
+      "3330\n",
+      "3340\n",
+      "3350\n",
+      "3360\n",
+      "3370\n",
+      "3380\n",
+      "3390\n",
       "3400\n",
+      "3410\n",
+      "3420\n",
+      "3430\n",
+      "3440\n",
+      "3450\n",
+      "3460\n",
+      "3470\n",
+      "3480\n",
+      "3490\n",
       "3500\n",
+      "3510\n",
+      "3520\n",
+      "3530\n",
+      "3540\n",
+      "3550\n",
+      "3560\n",
+      "3570\n",
+      "3580\n",
+      "3590\n",
       "3600\n",
+      "3610\n",
+      "3620\n",
+      "3630\n",
+      "3640\n",
+      "3650\n",
+      "3660\n",
+      "3670\n",
+      "3680\n",
+      "3690\n",
       "3700\n",
+      "3710\n",
+      "3720\n",
+      "3730\n",
+      "3740\n",
+      "3750\n",
+      "3760\n",
+      "3770\n",
+      "3780\n",
+      "3790\n",
       "3800\n",
+      "3810\n",
+      "3820\n",
+      "3830\n",
+      "3840\n",
+      "3850\n",
+      "3860\n",
+      "3870\n",
+      "3880\n",
+      "3890\n",
       "3900\n",
+      "3910\n",
+      "3920\n",
+      "3930\n",
+      "3940\n",
+      "3950\n",
+      "3960\n",
+      "3970\n",
+      "3980\n",
+      "3990\n",
       "4000\n",
+      "4010\n",
+      "4020\n",
+      "4030\n",
+      "4040\n",
+      "4050\n",
+      "4060\n",
+      "4070\n",
+      "4080\n",
+      "4090\n",
       "4100\n",
+      "4110\n",
+      "4120\n",
+      "4130\n",
+      "4140\n",
+      "4150\n",
+      "4160\n",
+      "4170\n",
+      "4180\n",
+      "4190\n",
       "4200\n",
+      "4210\n",
+      "4220\n",
+      "4230\n",
+      "4240\n",
+      "4250\n",
+      "4260\n",
+      "4270\n",
+      "4280\n",
+      "4290\n",
       "4300\n",
+      "4310\n",
+      "4320\n",
+      "4330\n",
+      "4340\n",
+      "4350\n",
+      "4360\n",
+      "4370\n",
+      "4380\n",
+      "4390\n",
       "4400\n",
+      "4410\n",
+      "4420\n",
+      "4430\n",
+      "4440\n",
+      "4450\n",
+      "4460\n",
+      "4470\n",
+      "4480\n",
+      "4490\n",
       "4500\n",
+      "4510\n",
+      "4520\n",
+      "4530\n",
+      "4540\n",
+      "4550\n",
+      "4560\n",
+      "4570\n",
+      "4580\n",
+      "4590\n",
       "4600\n",
+      "4610\n",
+      "4620\n",
+      "4630\n",
+      "4640\n",
+      "4650\n",
+      "4660\n",
+      "4670\n",
+      "4680\n",
+      "4690\n",
       "4700\n",
+      "4710\n",
+      "4720\n",
+      "4730\n",
+      "4740\n",
+      "4750\n",
+      "4760\n",
+      "4770\n",
+      "4780\n",
+      "4790\n",
       "4800\n",
-      "4900\n"
+      "4810\n",
+      "4820\n",
+      "4830\n",
+      "4840\n",
+      "4850\n",
+      "4860\n",
+      "4870\n",
+      "4880\n",
+      "4890\n",
+      "4900\n",
+      "4910\n",
+      "4920\n",
+      "4930\n",
+      "4940\n",
+      "4950\n"
      ]
     }
    ],
@@ -140,9 +586,9 @@
     "dataset_results = []\n",
     "imgIds = []\n",
     "for idx in range(len(val_dataset)):\n",
-    "    if idx % 100 == 0:\n",
+    "    if idx % 10 == 0:\n",
     "        print(idx)\n",
-    "\n",
+    "    \n",
     "    img, img_meta, _, _ = val_dataset[idx]\n",
     "\n",
     "    proposals = model.simple_test_rpn(img, img_meta)\n",
@@ -154,7 +600,7 @@
     "    for pos in range(res['class_ids'].shape[0]):\n",
     "        results = dict()\n",
     "        results['score'] = float(res['scores'][pos])\n",
-    "        results['category_id'] = int(res['class_ids'][pos])\n",
+    "        results['category_id'] = val_dataset.label2cat[int(res['class_ids'][pos])]\n",
     "        y1, x1, y2, x2 = [float(num) for num in list(res['rois'][pos])]\n",
     "        results['bbox'] = [x1, y1, x2 - x1 + 1, y2 - y1 + 1]\n",
     "        results['image_id'] = image_id\n",
@@ -163,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +627,7 @@
      "output_type": "stream",
      "text": [
       "Loading and preparing results...\n",
-      "DONE (t=0.90s)\n",
+      "DONE (t=0.78s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -193,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,21 +666,21 @@
      "text": [
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=17.52s).\n",
+      "DONE (t=17.32s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=2.73s).\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.057\n",
-      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.090\n",
-      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.060\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.037\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.057\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.076\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.045\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.070\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.072\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.051\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.075\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.095\n"
+      "DONE (t=2.24s).\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.353\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.556\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.384\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.194\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.392\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.469\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.295\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.440\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.453\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.257\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.499\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.601\n"
      ]
     }
    ],
