--- a/eval_model.ipynb
+++ b/eval_model.ipynb
@@ -16,7 +16,7 @@
     "from detection.models.detectors import faster_rcnn\n",
     "\n",
     "\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
    ]
   },
   {
@@ -67,9 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## next: \n",
-    "\n",
-    "train and validate on the same dataset\n"
+    "## test on the validation dataset\n"
    ]
   },
   {
