support multi-GPU training

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -133,8 +133,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_imgs = tf.Variable(np.expand_dims(img, 0))\n",
-    "batch_metas = tf.Variable(np.expand_dims(img_meta, 0))"
+    "batch_imgs = tf.Variable(np.expand_dims(img, 0), dtype=tf.float32)\n",
+    "batch_metas = tf.Variable(np.expand_dims(img_meta, 0), dtype=tf.float32)\n",
+    "batch_bboxes = tf.Variable(np.expand_dims(bboxes, 0), dtype=tf.float32)\n",
+    "batch_labels = tf.Variable(np.expand_dims(labels, 0), dtype=tf.int32)"
    ]
   },
   {
@@ -312,12 +314,6 @@
    ],
    "source": [
     "optimizer = tf.keras.optimizers.SGD(1e-3, momentum=0.9, nesterov=True)\n",
-    "\n",
-    "\n",
-    "batch_imgs = tf.Variable(np.expand_dims(img, 0))\n",
-    "batch_metas = tf.Variable(np.expand_dims(img_meta, 0))\n",
-    "batch_bboxes = tf.Variable(np.expand_dims(bboxes, 0))\n",
-    "batch_labels = tf.Variable(np.expand_dims(labels, 0))\n",
     "\n",
     "for batch in range(100):\n",
     "    with tf.GradientTape() as tape:\n",
